testsuite/poke.pkl/format-diag-2.pk
/* { dg-do compile } */

format ("%f1d", 1UH); /* { dg-error "" } */
